force-app/main/default/objects/ServiceConclusion__c/ServiceConclusion__c.object-meta.xml
<CustomObject>
    <label>サービス_締結</label>
    <nameField>
        <label>サービス_締結名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>