force-app/main/default/objects/ServiceConclusion__c/fields/ConclusionManualAdditionConfirmMatter__c.field-meta.xml
<CustomField>
    <fullName>ConclusionManualAdditionConfirmMatter__c</fullName>
    <label>締結マニュアル_追加確認事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>