force-app/main/default/objects/ServiceConclusion__c/fields/ConclusionManualSignApplicationCheckNote__c.field-meta.xml
<CustomField>
    <fullName>ConclusionManualSignApplicationCheckNote__c</fullName>
    <label>締結マニュアル_捺印申請チェック備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>