force-app/main/default/objects/ServiceConclusion__c/fields/ContractConfirmMatterCorrectionDocument__c.field-meta.xml
<CustomField>
    <fullName>ContractConfirmMatterCorrectionDocument__c</fullName>
    <label>締結契約内容確認事項_修正書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>