force-app/main/default/objects/ServiceConclusion__c/fields/ContractCorrectionRequestContent__c.field-meta.xml
<CustomField>
    <fullName>ContractCorrectionRequestContent__c</fullName>
    <label>締結契約修正依頼内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>