force-app/main/default/objects/ServiceConclusion__c/fields/ContractStorageMethod__c.field-meta.xml
<CustomField>
    <fullName>ContractStorageMethod__c</fullName>
    <label>契約書保管方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>