force-app/main/default/objects/ServiceConclusion__c/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <label>在宅非表示フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>