force-app/main/default/objects/ServiceConclusion__c/fields/SignApplicationFormEnclosedDocument__c.field-meta.xml
<CustomField>
    <fullName>SignApplicationFormEnclosedDocument__c</fullName>
    <label>捺印申請書同封書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>