force-app/main/default/objects/ServiceConclusion__c/fields/SignApplicationRule__c.field-meta.xml
<CustomField>
    <fullName>SignApplicationRule__c</fullName>
    <label>捺印申請書ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>