force-app/main/default/objects/ServiceConclusion__c/fields/SignTeamEmail__c.field-meta.xml
<CustomField>
    <fullName>SignTeamEmail__c</fullName>
    <label>捺印管理メール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>