force-app/main/default/objects/ServiceConclusion__c/fields/SignTeamFax__c.field-meta.xml
<CustomField>
    <fullName>SignTeamFax__c</fullName>
    <label>捺印管理FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>